--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+img {
+  display: block;
+  max-width: 100%; 
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
