--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,9 +478,45 @@ section {
   background: #eafaf7;
 }
 
+/*--------------------------------------------------------------
+# Activity
+--------------------------------------------------------------*/
+.activity ul.timeline {
+  list-style-type: none;
+  position: relative;
+}
+.activity ul.timeline:before {
+  content: ' ';
+  background: #1f977d;
+  display: inline-block;
+  position: absolute;
+  left: 29px;
+  width: 2px;
+  height: 100%;
+  z-index: 400;
+}
+.activity ul.timeline > li {
+  margin: 20px 0;
+  padding-left: 20px;
+}
 
+.activity ul.timeline > li:before {
+  content: ' ';
+  background: white;
+  display: inline-block;
+  position: absolute;
+  border-radius: 50%;
+  border: 2px solid #1f977d;
+  left: 20px;
+  width: 20px;
+  height: 20px;
+  z-index: 400;
+}
 
-
+.activity b {
+  color: #02352a;
+  font-weight: 600;
+}
 
 
 /*--------------------------------------------------------------
