--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,7 +339,12 @@ section {
 /*--------------------------------------------------------------
 # More Award
 --------------------------------------------------------------*/
-
+.more_award .card-img-top {
+  width: 100%;
+  height: 40vh;
+  min-height: 300px;
+  object-fit: contain;
+}
 
 
 /*--------------------------------------------------------------
@@ -528,6 +533,15 @@ section {
   font-family: "Raleway", sans-serif;
 }
 
+/*--------------------------------------------------------------
+# Dream
+--------------------------------------------------------------*/
+.dream .card-img-top {
+  width: 100%;
+  height: 40vh;
+  min-height: 300px;
+  object-fit: contain;
+}
 
 /*--------------------------------------------------------------
 # Contact
