Consistent button style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,14 +37,14 @@ img {
 
 .btn-custom-green {
   color: #fff;
-  background-color: #347a7b;
-  border-color: #347a7b;
+  background-color: #1f977d;
+  border-color: #1f977d;
 }
 
 .btn-custom-green:hover {
   color: #fff;
-  background-color: #2e7071;
-  border-color: #2e7071;
+  background-color: #02352a;
+  border-color: #02352a;
 }
 
 /*--------------------------------------------------------------
