--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,17 @@ section {
   background-color: rgb(241, 241, 233);
 }
 
+/*--------------------------------------------------------------
+# Project
+--------------------------------------------------------------*/
+.project .card-img-top {
+  width: 100%;
+  height: 40vh;
+  min-height: 300px;
+  object-fit: contain;
+  background-color: rgb(241, 241, 233);
+}
+
 
 /*--------------------------------------------------------------
 # Facts
