--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,6 +449,62 @@ section {
   background-color: #0bbd87;
 }
 
+.skills .icon-box {
+  margin-bottom: 20px;
+}
+
+.skills .icon {
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 54px;
+  height: 54px;
+  background: #0bbd87;
+  border-radius: 50%;
+  transition: 0.5s;
+  border: 1px solid #0bbd87;
+}
+
+.skills .icon i {
+  color: #fff;
+  font-size: 24px;
+  line-height: 0;
+}
+
+.skills .icon-box:hover .icon {
+  background: #fff;
+}
+
+.skills .icon-box:hover .icon i {
+  color: #0bbd87;
+}
+
+.skills .title {
+  margin-left: 80px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 18px;
+}
+
+.skills .title a {
+  color: #343a40;
+}
+
+.skills .title a:hover {
+  color: #0bbd87;
+}
+
+.skills .description {
+  margin-left: 80px;
+  line-height: 24px;
+  font-size: 14px;
+}
+
+.skills b {
+  color: #02352a;
+}
+
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
